# coconext

./: .clang-format  .clang-tidy  .clangd  .codecov.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  DEVELOPING.md  Makefile  README.md  gcovr.cfg  noxfile.py  pyproject.toml  setup.cfg
.github/: dependabot.yml  generate-envs.py
.github/workflows/: clang-tidy.yaml  integration_tests.yaml  prek-autoupdate.yaml  prek-run.yaml  regression-tests.yaml  release.yaml  test-dev.yaml  test-release.yaml  tests.yaml  uv-upgrade.yaml
bind/types/: bind.cpp  bind_logic.cpp  bind_range.cpp
cmake/: coconextConfig.cmake.in
cpp/: CMakeLists.txt  README.md
cpp/include/cocoint/: cocoint_lib.hpp
cpp/include/coconext/: random.hpp  sim_objects.hpp  types.hpp
cpp/include/coconext/types/: array.hpp  array_base.hpp  concepts.hpp  count_iterator.hpp  direction.hpp  dyn_array.hpp  dynamic_array.hpp  hash.hpp  int.hpp  int_base.hpp  int_common.hpp  logic.hpp  logic_array.hpp  range.hpp  resize_mode.hpp  reverse.hpp  signed.hpp  static_array.hpp  string_literal.hpp  unsigned.hpp  vector.hpp
cpp/src/: logic.cpp  random.cpp  random.hpp  sim_objects.cpp
cpp/tests/: test_array.cpp  test_logic.cpp  test_range.cpp
docs/: cmake_reference.rst  conf.py  cpp_nanobind_reference.rst  cpp_types_reference.rst  ignore_undoc_special_methods.py  index.rst  installation.rst  installation_without_uv.rst  python_reference.rst  reference.rst  requirements.txt  tools_reference.rst  tutorial.rst
docs/dev/: architecture.md  cpp_scheduler_redesign.md  sfixed_ufixed_api.md  type_system.md  unsigned_signed_api.md
nanobind/: CMakeLists.txt  README.md
nanobind/include/: bind_vector.hpp  type_cast_array.hpp  type_cast_vector.hpp
nanobind/include/coconext_nb/: types.hpp
nanobind/src/: bind.cpp
nanobind/src/types/: bind.cpp  bind_array.cpp  bind_logic.cpp  bind_range.cpp  bind_vector.cpp
python/: _coconext.pyi  _pycoconext.pyi  pyproject.toml
python/coconext/: __init__.py  cocotb_patcher.py  queue.py  triggers.py  types.py
python/coconext_tools/: __init__.py  config.py
src/: pyproject.toml
src/coconext/: __init__.py  _concurrent_waiters.py  _task_manager.py  _utils.py  mailbox.py  queue.py  simtime.py  task.py  triggers.py
src/coconext/types/: __init__.py  _bit_array.py  hello.cpp
tests/: requirements.txt  test_release_paths.py
tests/cpp/: CMakeLists.txt  test_array.cpp  test_int.cpp  test_logic.cpp  test_logic_array.cpp  test_range.cpp  test_reverse.cpp  test_signed.cpp  test_static_array.cpp  test_unsigned.cpp
tests/integration_tests/: test_logic_coverage.py  test_patched_cocotb.py  test_range_coverage.py
tests/nanobind/: CMakeLists.txt  bind.cpp  bind_vector.cpp  type_cast_array.cpp  type_cast_vector.cpp
tests/nanobind/bind_vector/: bind_typed_vector.cpp  test_typed_vector.py
tests/nanobind/pytest/: conftest.py  test_array_caster.py  test_vector_caster.py
tests/python/: queue_tests.py  simtime_tests.py  test_coconext.py  test_logic.py  test_patched_cocotb.py  test_range.py  test_typed_vector.py  trigger_tests.py
tests/test_coconext/: empty.vhd  mailbox_tests.py  queue_tests.py  simtime_tests.py  task_manager_tests.py  test_array.py  test_bitarray.py  test_coconext.py  trigger_tests.py
tools/: release_paths.py
