[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "coconext"
dependencies = [
    "cocotb >= 2.0.dev0",
]
requires-python = ">=3.8"
authors = [
    {name="Kaleb Barrett", email="dev.ktbarrett@gmail.com"},
]
maintainers = [
    {name="Kaleb Barrett", email="dev.ktbarrett@gmail.com"},
]
description = "Features for future versions of cocotb"
readme = "README.md"
dynamic = ["version", "license"]

[project.urls]
Repository = "https://github.com/ktbarrett/coconext.git"
"Bug Tracker" = "https://github.com/ktbarrett/coconext/issues"

[project.optional-dependencies]
dev = [
    "ruff",         # For formatting and linting
    "mypy",         # For type checking
    "pytest",       # For typing test files (use nox to run tests)
    "nox",          # For running tests, building docs, and type checking noxfile.py
    "pre-commit",   # For pre-commit hooks
    "coverage",     # For inspecting coverage reports
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "RUF"   # ruff
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
packages = ["coconext", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
show_error_codes = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    # for excluding typing stubs
    "\\.\\.\\.",
    # excluding type checking blocks
    "if (typing\\.)?TYPE_CHECKING:"
]
