[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "coconext"
dependencies = [
    "cocotb@https://github.com/cocotb/cocotb.git",
    'exceptiongroup; python_version < "3.11"',
]
requires-python = ">=3.9,<3.15"
authors = [
    {name="Kaleb Barrett", email="dev.ktbarrett@gmail.com"},
]
maintainers = [
    {name="Kaleb Barrett", email="dev.ktbarrett@gmail.com"},
]
description = "Features for future versions of cocotb"
readme = "README.md"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ktbarrett/coconext.git"
"Bug Tracker" = "https://github.com/ktbarrett/coconext/issues"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/coconext/__init__.py"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TC",   # flake8-typechecking
]
ignore = [
    "E501",  # line too long
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["coconext"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
packages = ["coconext", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
show_error_codes = true

[dependency-groups]
dev = [
    "mypy",
    "nanobind",
    "nox[uv]",
    "pre-commit",
    "pytest",
    "ruff",
]
docs = [
    "sphinx>=8.2",  # Require 8.2+ for :deco: directive
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinxcontrib-prettyspecialmethods@https://github.com/sphinx-contrib/prettyspecialmethods.git",
]
tests = [
    "coverage[toml]>=7.2",  # Require 7.2+ for builtin coverage excludes and "exclude_also"
    "pytest-cov",
    "pytest",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.11"}

[tool.coverage.report]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
