[build-system]
requires = [
    "scikit-build-core >=0.4.3",
    "nanobind >=1.3.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "coconext"
dependencies = [
    "cocotb@https://github.com/cocotb/cocotb.git",
    'exceptiongroup; python_version < "3.11"',
]
requires-python = ">=3.9,<3.15"
authors = [
    {name="Kaleb Barrett", email="dev.ktbarrett@gmail.com"},
]
maintainers = [
    {name="Kaleb Barrett", email="dev.ktbarrett@gmail.com"},
]
description = "Features for future versions of cocotb"
readme = "README.md"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ktbarrett/coconext.git"
"Bug Tracker" = "https://github.com/ktbarrett/coconext/issues"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/coconext/__init__.py"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "RUF",  # ruff
    "TC",   # flake8-typechecking
]
ignore = [
    "E501",  # line too long
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["coconext"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
packages = ["coconext", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
show_error_codes = true

[dependency-groups]
dev = [
    "nanobind",
    "cmake>=3.20",
    "scikit-build-core",
    "setuptools",
    "coverage[toml]>=7.2",  # Require 7.2+ for builtin coverage excludes and "exclude_also"
    "pytest-cov",
    "pytest",
    "gcovr>=8.4,!=8.5",  # 8.4 introduced block exclusions, 8.5 was broken
]
docs = [
    "sphinx>=8.2",  # Require 8.2+ for :deco: directive
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinxcontrib-prettyspecialmethods@https://github.com/sphinx-contrib/prettyspecialmethods.git",
]

[tool.uv.dependency-groups]
docs = {requires-python = ">=3.11"}

[tool.coverage.report]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
]

[tool.scikit-build]
build-dir = "build"
cmake.version = ">=3.20"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = true

[tool.codespell]
ignore-words-list = "sting"

[tool.cibuildwheel]
build = "cp*-manylinux_x86_64 cp*-macosx_x86_64 cp*-macosx_arm64"
manylinux-x86_64-image = "manylinux_2_28"
environment = {CFLAGS = "-O2 -g -flto", CPPFLAGS = "-O2 -g -flto", LDFLAGS = "-O2 -g -flto"}
build-frontend = "build[uv]"
# Tests run in a separate matrix job, not by cibuildwheel: the cocotb tests
# need an HDL simulator that isn't in the manylinux container.
test-skip = "*"

[tool.pytest]
testpaths = [
    "tests/python",
]
